# research-automation

./: %1  .RData  .Renviron  .env  .pre-commit-config.yaml  DOCX_MANUSCRIPT_CREATION_PLAN.md  EXECUTION_VERIFICATION_REPORT.md  FINAL_COMPLETION_DECLARATION.md  LITERATURE_SEARCH_WORKFLOW.md  MCP_SERVERS_README.md  PROJECT_FINISHED.md  PROTOCOL_LIMITATIONS_RESOLUTION.docx  PROTOCOL_LIMITATIONS_RESOLUTION.md  README.md  README_mDR-TB_Research_Package.md  README_project_organization.md  Run-RScript.ps1  SUBMISSION_READY_FILES.md  advanced_paper_access.py  ai_radiology_complete_manuscript.docx  ai_radiology_genuine_manuscript.docx  ai_radiology_plots_generator.py  air_pollution_tb_ecological_study_complete.docx  air_pollution_tb_ecological_study_protocol.md  air_pollution_tb_ecological_study_results.md  air_pollution_tb_references_database.md  air_pollution_tb_results_tables.md  air_pollution_tb_technical_appendices.md  air_pollution_tb_validation_framework.md  air_pollution_tb_visualization_system.py  air_pollution_vaccine_complete_manuscript.docx  air_pollution_vaccine_genuine_manuscript.docx  antibiotic_microbiome_tb_results_20250925.csv  antibiotic_microbiome_tb_results_20250925.json  appendices_ai_radiology_technical.md  audit_detailed_results.json  audit_final_report.md  audit_table_analysis.docx  audit_table_analysis.md  author_access_campaign.py  (+204 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.streamlit/: config.toml
02_bibliometrics/: Makefile  analyze_faers.R  clean_faers.R  fetch_faers.py
03_omics_single/: Makefile  README.md  integration_covid_microbiome_transcriptome.qmd
04_results_visualization/: meta_analysis_results.csv  mortality_studies_data.csv
Fibromyalgia_Microbiome_MetaAnalysis/: FINAL_DELIVERABLES.md  FINAL_FILES_INVENTORY.md  FINAL_VISUALIZATION_SUMMARY.md  PRISMA_flowchart.md  PUBLICATION_READY_FINAL_MANUSCRIPT.docx  PUBLICATION_READY_FINAL_MANUSCRIPT.md  create_presentation.py  detailed_search_strategy.md  fibromyalgia_microbiome_presentation.pptx  final_manuscript.md  final_manuscript_presentation.pptx  png_generator_simple.py  project_summary.md  protocol.md  scientific_committee_presentation.md  scientific_committee_presentation.pptx  supplementary_materials_complete.md  supplementary_materials_presentation.pptx  visualizations_generate.R
ICMR_FIWC_Proposal/: README.md
ICMR_FIWC_Proposal_DOCX/: FIWC_Proposal_Budget_Justification.docx  FIWC_Proposal_Main_Document.docx  FIWC_Proposal_Principal_Investigator_CV.docx  FIWC_Proposal_Project_Overview.docx  FIWC_Proposal_Project_Timeline.docx  FIWC_Proposal_Regulatory_Compliance.docx  FIWC_Proposal_Technical_Methodology.docx  FIWC_Proposal_Validation_Checklist.docx
Microplastics Exposure Mitigation/: data_extraction_table.md  research_notes.md  research_report.md  research_report_tmp.html  systematic_review_protocol.md
ai_radiology_diagnostic_research/: double_extraction_validation_report_20250922_225427.md  double_extraction_validation_report_20250922_230642.md  double_extraction_validation_report_20250922_232229.md  double_extraction_validation_report_20250925_002254.md  double_extraction_validation_report_20250925_002437.md  double_extraction_validation_report_20251013_201616.md
air_pollution_tb_ecological_study/: double_extraction_validation_report_20250922_225427.md  double_extraction_validation_report_20250922_230642.md  double_extraction_validation_report_20250922_232230.md  double_extraction_validation_report_20250925_002255.md  double_extraction_validation_report_20250925_002437.md  double_extraction_validation_report_20251013_201616.md
air_pollution_vaccine_research/: double_extraction_validation_report_20250925_002437.md  double_extraction_validation_report_20251013_201616.md
antibiotic_microbiome_tb/: data_extraction_detailed_20250925.json  data_extraction_form.py  final_manuscript_antibiotic_microbiome_tb.docx  final_manuscript_antibiotic_microbiome_tb.md  literature_search_execution.py  meta_analysis_final.py  meta_analysis_python_stats.py  meta_analysis_statistics.R  plots_visualization_antibiotic_microbiome_tb.py  prisma_flow_antibiotic_microbiome_tb_20250925.md  protocol_antibiotic_microbiome_tb.docx  protocol_antibiotic_microbiome_tb.md  references_antibiotic_microbiome_tb_database.md  results_tables_antibiotic_microbiome_tb.md  risk_bias_assessment.py  risk_bias_assessment_20250925.csv  robins_assessment_detailed_20250925.json  robins_assessment_summary_20250925.md  screening_detailed_results_20250925.json  screening_results_20250925.csv  screening_workflow.py  supplementary_materials_comprehensive.md  supplementary_materials_packages.docx  supplementary_materials_professional.docx
booster_vaccine_safety/: double_extraction_validation_report_20250922_225242.md  double_extraction_validation_report_20250922_225427.md  double_extraction_validation_report_20250922_230642.md  double_extraction_validation_report_20250922_232229.md  double_extraction_validation_report_20250925_002254.md  double_extraction_validation_report_20250925_002437.md  double_extraction_validation_report_20251013_201616.md
burnout_interventions_healthcare_workers/: double_extraction_validation_report_20250922_225427.md  double_extraction_validation_report_20250922_230642.md  double_extraction_validation_report_20250922_232229.md  double_extraction_validation_report_20250925_002254.md  double_extraction_validation_report_20250925_002437.md  double_extraction_validation_report_20251013_201616.md
child hood_obesity_urbanization/: double_extraction_validation_report_20250925_002437.md  double_extraction_validation_report_20251013_201616.md
childhood_pneumonia_prevention_pcv_influenza/: .gitignore  PROJECT_COMPLETION_SUMMARY.md  README.md  final_authored_manuscript.md  requirements.txt
childhood_pneumonia_prevention_pvc_influenza/: PROJECT_COMPLETION_CORRECTION.md
climate_vector_diseases_research/: double_extraction_validation_report_20250925_002437.md  double_extraction_validation_report_20251013_201616.md
comprehensive_long_covid_review_output/: PRISMA_flow_diagram.md  (+3 more)
(+615 files in other folders)
